feat: basic cached llm access

--- a/resources/prompt.hbs
+++ b/resources/prompt.hbs
@@ -5,4 +5,4 @@ This data needs to be realistic so please do not use dummy names. Use real names
 Below is a list of form fields in JSON format. Fill in the values.
 We need {{COUNT}} total responses returned as a JSON array. Respond only with JSON with no commentary.
 
-{{FIELDS}}
+{{{FIELDS}}}
